8 спринт - согласно ТЗ